Now DataBase data goes to Logic.js

--- a/popup.html
+++ b/popup.html
@@ -23,5 +23,6 @@
         <button type="button" id ="data"> submit </button>
     </div>
     <script src="script.js"></script>
+    <script src="Logic.js"></script>
 </body>
 </html>
